# JNIProject

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jniproject/: MainActivity.kt
app/src/main/java/com/example/jniproject/jnidemo/: JNIUtils.java
app/src/main/java/com/example/jniproject/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  com_example_jniproject_jnidemo_JNIUtils.h  native-lib.cpp
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
